# gb2312_to_utf8

./: .clang-format  CMakeLists.txt
src/: gb2312.c  gb2312.h  gb2312_codec.c  gb2312_codec.h  main.c  test.c  unpack_message.c  unpack_message.h  utf16_gb2312_map.c  utf16_gb2312_map.h
test/: gb2312.txt  test.c  utf8.txt
